--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
+<head>
+    <meta charset="utf-8">
+</head>
+
 <!--
 GROUP 5 ZOMBIE PROJECT
 -->
+
+<!-- HELLO this is a new omment to test if we can commit to github--> 
