Added almost all php files.

--- a/index.html
+++ b/index.html
@@ -29,21 +29,29 @@
         <nav class="navbar navbar-exapnd-lg navbar-light">
             <a class="navbar-brand" href="#">Zombie Survival Guide</a>
 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarSupportedContent">
     <span class="navbar-toggler-icon"></span>
   </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <!-- ADD LINKS TO OTHER WEB PAGES LATER!!! -->
-                        <a class="nav-link" href="#">Zombie Attacks</a>
+                        <a class="nav-link" href="Zombies.php">Zombies</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Survivors</a>
+                        <a class="nav-link" href="Attacks.php">Zombie Attacks</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Scavenged Food</a>
+                        <a class="nav-link" href="SurvivingNeighbors.php">Survivors</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="FoodInventory.php">Scavenged Food</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="HealthSurvey.php">Health Survey</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#footer">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -53,10 +61,24 @@
         <div class="row">
             <div class="col-lg-6">
                 <h2 class="big-heading">Zombies!!!</h2>
+                <button class="btn-dark btn-lg selfdestruct-button">Self Destruct <em class="fa-solid fa-skull"></em></button>
             </div>
 
             <div class="col-lg-6">
                 <img class="title-image" src="images/zombies.png" alt="zombies">
+            </div>
+        </div>
+    </section>
+    
+    <!-- Another Section we can use to change later --> 
+    <section class="white-section" id="tips">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="feature-box col-lg-4">
+                    <em class="fa-solid fa-person-running"></em>
+                    <h3 class="feature-title"">RUN. Don't walk when you encounter a zombie!</h3>
+                    
+                </div>
             </div>
         </div>
     </section>
