--- a/index.html
+++ b/index.html
@@ -1,151 +1,69 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr" <!-- GROUP 5 PROJECT Static S3 Landing Page -->
-
 <head>
     <meta charset="utf-8">
     <meta name="author" content="Group 5 Members">
-    <meta name="description" content="Group 5's Internship Project" <!-- Bootstrap CSS Style Sheets -->
+    <meta name="description" content="Group 5's Internship Project" 
+    
+    <!-- Bootstrap CSS Style Sheets -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <!-- This is where we put the .css file after bootstrap to override Bootstrap styling -->
-    <link rel="stylesheet" href="css/styles.css">
+     <!--This is where we put the .css file after bootstrap to override Bootstrap styling -->
+    <link rel="stylesheet" href="css/sample_style.css">
 
-    <!-- Font Awesome (icons) -->
+    <script src="sample.js"></script>
+     <!--Font Awesome (icons) -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+    <script src="https://kit.fontawesome.com/3ba8aa97bb.js" crossorigin="anonymous"></script>
 
-    <!-- TODO: Google Fonts -->
+     <!--TODO: Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Creepster&family=Ubuntu" rel="stylesheet">
 
-    <!-- Bootstrap Scripts -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <!--Bootstrap Scripts -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
-    <title>Zombie Survival</title>
+    <title>sample</title>
 </head>
+<nav id="floatingMenu">
+	<ul>
+		<button> <!—change this—> </button>
+
+	            <li><a href="index.html"> Home </a></li>
+                <li><a href="http://ec2-34-205-161-96.compute-1.amazonaws.com/Attacks.php"> Zombie Attacks </a></li>
+                <li><a href="http://ec2-34-205-161-96.compute-1.amazonaws.com/SurvivingNeighbors.php"> Survivors </a></li>
+                <li><a href="http://ec2-34-205-161-96.compute-1.amazonaws.com/HealthSurvey.php"> Health Survey </a></li>
+                <li><a href="http://ec2-34-205-161-96.compute-1.amazonaws.com/FoodInventory.php"> Food Inventory </a></li>
+	</ul>
+</nav>
 
 <body>
-    <section class="colored-section" id="title">
-        <div class="container-fluid">
-            <!-- Navigation Bar Section -->
-            <nav class="navbar navbar-exapnd-lg navbar-light">
-                <a class="navbar-brand" href="#">Zombie Survival Guide</a>
+  <section  id="section1" >
+  <div class="row">
+  <div class="col-lg-6">
+      <h1 class="big-heading">Learn how to Survive the Zombie Apocalypse!</h1>
+      <button class="btn-dark btn-lg selfdestruct-button">Survivor Form<em class="fa-solid fa-skull"></em></button>
+  </div>
+  
+  <div class="col-lg-6">
+       <img class="title-image" src="images/zombies2.png" alt="zombies">
+  </div>
+  </div>
+                    
+  </section>
 
-                <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarSupportedContent">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+  <section  id="section4">
+  <div class="social-icon">
+      <div class="container-fluid ">
+          <a href="https://www.linkedin.com/in/bridgit-arika-8aba17aa/"></a><em class="social-icon fab fa-linkedin fa-3x"></em></a>
+          <a href="https://www.linkedin.com/in/aansavirk/"></a><em class="social-icon fab fa-linkedin fa-3x"></em></a>
+          <a href="https://www.linkedin.com/in/josephine-rhino-9456051ba/"></a><em class="social-icon fab fa-linkedin fa-3x"></em></a>
+          <a href="https://www.linkedin.com/in/michel-tchangam-923887126/"></a><em class="social-icon fab fa-linkedin fa-3x"></em></a>
+          <a href="https://www.linkedin.com/in/bryan-p%C3%A9rez/"></a><em class="social-icon fab fa-linkedin fa-3x"></em></a>
+          <p>© Copyright 2021 CSA Internship - Group 5</p>
+      </div>
+  </section>
 
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="Zombies.php">Zombies</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Attacks.php">Zombie Attacks</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="SurvivingNeighbors.php">Survivors</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="FoodInventory.php">Scavenged Food</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="HealthSurvey.php">Health Survey</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#footer">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-
-            <!-- Title Section -->
-            <div class="row">
-                <div class="col-lg-6">
-                    <h2 class="big-heading">Learn how to Survive the Zombie Apocalypse!</h2>
-                    <button class="btn-dark btn-lg selfdestruct-button">Survivor Form<em class="fa-solid fa-skull"></em></button>
-                </div>
-
-                <div class="col-lg-6">
-                    <img class="title-image" src="images/zombies.png" alt="zombies">
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Another Section we can use to change later -->
-    <section class="white-section" id="tips">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="tips-box col-lg-4">
-                    <em class="fa-solid fa-person-running fa-4x"></em>
-                    <h3 class="tips-title">RUN. Don't walk when you encounter a zombie!</h3>
-                </div>
-
-                <div class="tips-box col-lg-4 ">
-                    <em class="fa-solid fa-person-running "></em>
-                    <h3 class="tips-title">RUN. Don't walk when you encounter a zombie!</h3>
-                </div>
-
-                <div class="tips-box col-lg-4">
-                    <em class="fa-solid fa-person-running"></em>
-                    <h3 class="tips-title">RUN. Don't walk when you encounter a zombie!</h3>
-                </div>
-
-            </div>
-        </div>
-    </section>
-
-    <!-- Survivor Stories Section -->
-    <section class="colored-section " id="survivorstories ">
-        <div id="survivorstories-carousel " class="carousel slide " data-ride="false ">
-            <div class="carousel-inner ">
-
-                <div class="carousel-item active container-fluid ">
-                    <h2 class="survivorstories-text ">"A zombie bit me and I ate a banana and felt better! " </h2>
-                    <img class="survivorstories-image " src="images/woman1.jpg " alt="woman ">
-                    <em> Mary, Johnson</em>
-                </div>
-
-                <div class="carousel-item active container-fluid ">
-                    <h2 class="survivorstories-text ">"A zombie bit me and I ate a banana and felt better! " </h2>
-                    <img class="survivorstories-image " src="images/woman1.jpg " alt="woman ">
-                    <em> Mary, Johnson</em>
-                </div>
-
-                <div class="carousel-item active container-fluid ">
-                    <h2 class="survivorstories-text ">"A zombie bit me and I ate a banana and felt better! " </h2>
-                    <img class="survivorstories-image " src="images/woman1.jpg " alt="woman ">
-                    <em> Mary, Johnson</em>
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#survivorstories-carousel" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon"></span>
-            </a>
-            <a class="carousel-control-next" href="#survivorstories-carousel" role="button" data-slide="next">
-                <span class="carousel-control-next-icon"></span>
-            </a>
-        </div>
-    </section>
-
-    <!-- Another Section -->
-    <section class="colored-section" id="press">
-        <h3>Another Section</h3>
-    </section>
-
-
-    <!-- Footer Section -->
-    <footer class="white-section " id="footer">
-        <div class="container-fluid ">
-            <em class="social-icon far fa-envelope "></em>
-            <em class="social-icon fab fa-facebook "></em>
-            <em class="social-icon fab fa-twitter "></em>
-            <em class="social-icon fab fa-instagram "></em>
-            <p>© Copyright 2021 CSA Internship - Group 5</p>
-        </div>
-    </footer>
-
-
-</body>
-
+    </body>
 </html>
